♻️ 플러그인명 및 파일명 변경

--- a/datatables-library/multicellTest.html
+++ b/datatables-library/multicellTest.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="./datatable-multicell.js"></script>
+    <script src="./multiCellSelectionManager.js"></script>
 
     <style>
         .selected-cell {
@@ -54,7 +54,7 @@
             // Initialize DataTable
             $('#example').DataTable();
 
-            $('#example').initMultiCellSelection(); // Initialize the multi-cell selection on the table with id 'example'
+            $('#example').multiCellSelectionManager(); // Initialize the multi-cell selection on the table with id 'example'
         });
     </script>
 </body>
